# degen-digest

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLOUD_DEPLOYMENT_VERIFICATION.md  CLOUD_INTEGRATION_SUMMARY.md  CLOUD_LOGS_FIX_SUMMARY.md  CLOUD_SETUP_GUIDE.md  CLOUD_SYSTEM_SUMMARY.md  DASHBOARD_README.md  DATABASE_SETUP_GUIDE.md  DATA_MERGE_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.aggregator  Dockerfile.crawler  Dockerfile.crypto  Dockerfile.dashboard  Dockerfile.dexpaprika  Dockerfile.dexscreener  Dockerfile.lightweight  Dockerfile.news  Dockerfile.reddit  Dockerfile.reddit_api  Dockerfile.twitter  Dockerfile.twitter.fixed  ENHANCED_VIRALITY_README.md  ENHANCED_VIRAL_SYSTEM_GUIDE.md  FARMCHECKER_DEPLOYMENT_SUMMARY.md  FIX_ALL_ISSUES.md  FREQUENT_MIGRATION_SUMMARY.md  INTELLIGENT_ANALYSIS_PLAN.md  LICENSE  MIGRATION_SYSTEM_SUMMARY.md  MONITORING_STATUS_REPORT.md  MULTI_SERVICE_ARCHITECTURE.md  MULTI_SERVICE_DEPLOYMENT_SUMMARY.md  (+177 more)
.github/workflows/: ci.yml  digest.yml
cloud_function/: digest_main.py  main.py  migrate_to_sql_simple.py  requirements.txt
cloud_function/storage/: __init__.py  db.py
cloud_function/utils/: __init__.py  advanced_logging.py  data_quality_monitor.py  env.py  health_monitor.py  llm_cache.py  logger.py  notion.py  pdf.py  rate_limiter.py
config/: app_config.yaml  cloud_config.yaml  influencers.json  influencers.py  keywords.json  keywords.py
dashboard/: app.py  main.py
dashboard/output/: degen_digest.db
dashboard/pages/: Advanced_Analytics.py  Analytics.py  Buzz_Heatmap.py  Data_Cleanup.py  Data_Sync.py  Digest_Archive.py  Digests.py  Direct_Digest.py  Health_Monitor.py  Latest_Digest.py  Live_Feed.py  Pred_vs_Actual.py  Sources.py  Top_Engagement.py  Top_Gainers.py  Top_Items.py  Viral_Analytics.py
docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  LOGGING.md  MONITORING.md  SYSTEM_DOCUMENTATION.md  TESTING.md  TROUBLESHOOTING.md
enrich/: __init__.py  token_price.py
farmchecker_new/: Dockerfile  README.md  analytics.html  analytics.js  app.js  check_dex_data.py  create_articles_table.sql  create_crawler_status_table.sql  create_dedicated_crawler_tables.sql  create_dex_tables.sql  crypto.html  crypto.js  deploy.sh  deploy_crypto.sh  dex.html  dex.js  enhanced_logging_config.py  fix_content_issue.py  fix_titles_and_deduplication.py  home.js  index.html  migrate_crypto_only.py  migrate_dex_only.py  migrate_dexpaprika_only.py  migrate_dexscreener_only.py  migrate_news_to_articles.py  migrate_reddit_only.py  migrate_to_dedicated_tables.py  migrate_twitter_only.py  news.html  news.js  reddit.html  reddit.js  requirements.txt  server.py  server_simple.py  server_temp.py  setup_crawler_status.py  status.html  status.js  (+9 more)
farmchecker_new/docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  README.md
farmchecker_new/utils/: enterprise_logger.py
migration_deploy_simple/: main.py  requirements.txt
migration_service/: Dockerfile  main.py  requirements.txt
models/: train_meme_lr.py
output/: apify_cache.json  coingecko_raw.json  dashboard_processed_data.json  degen_digest.backup.1751375909.db  degen_digest.backup.20250630_155721.db  degen_digest.db  digest-2025-06-30.md  digest-2025-07-01.md  digest-test.md  digest.html  digest.md  enhanced_twitter_data.json  health_alerts.json  health_metrics.json  last_twitter_run.txt  llm_cache.sqlite  merge_report.json  newsapi_raw.json  reddit_raw.json  review_tmp.md  seen_tweet_ids.json  telegram_raw.json
output/buzz/: buzz_20250629_19.json  buzz_20250629_20.json
output/enhanced_pipeline/: enhanced_data.json  intelligent_digest.md  market_insights.json  pipeline_stats.json  processed_data.json  summary_report.json  trends_analysis.json  viral_predictions.json
processor/: __init__.py  buzz.py  classifier.py  content_clustering.py  enhanced_viral_predictor.py  google_ai_summarizer.py  scorer.py  summarizer.py  viral_predictor.py  virality_train.py
scrapers/: coingecko_gainers.py  dexpaprika.py  dexscreener.py  discord_scraper.py  enhanced_twitter_scraper.py  newsapi_headlines.py  reddit_rss.py  telegram_telethon.py  twitter_apify.py  twitter_metrics_refresh.py  twitter_playwright.py  twitter_playwright_enhanced.py
scripts/: automated_data_pipeline.py  automated_retraining.py  check_cloud_status.py  cloud_storage_sync.py  consolidate_cloud_data.py  continuous_solana_crawler.py  deduplicate_data.py  enhanced_data_pipeline.py  enhanced_multi_crawler.py  enhanced_reddit_crawler.py  enhanced_viral_consolidator.py  merge_local_cloud_data.py  multi_source_crawler.py  playwright_pipeline.py  process_crawler_data.py  run_all.py  setup_database.py  standardize_cloud_data.py
storage/: __init__.py  db.py
tests/: conftest.py  test_budget.py  test_classifier.py  test_price.py
utils/: advanced_logging.py  cloud_config.py  data_quality_monitor.py  enterprise_logging.py  env.py  health_monitor.py  llm_cache.py  logger.py  monitoring.py  notion.py  pdf.py  rate_limiter.py
